# mailhook_oss

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SPEC.md  README.md  TODO.md  alembic.ini  api.json  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_domains_mailboxes.py  003_add_emails_threads.py
src/mailhookoss/: config.py  main.py
src/mailhookoss/api/: deps.py  errors.py  middleware.py  pagination.py
src/mailhookoss/api/v1/: api_keys.py  domains.py  health.py  mailboxes.py  router.py  tenants.py
src/mailhookoss/api/v1/schemas/: __init__.py  api_key.py  domain.py  mailbox.py  tenant.py
src/mailhookoss/application/api_keys/: create_api_key.py  delete_api_key.py  list_api_keys.py
src/mailhookoss/application/domains/: create_domain.py  delete_domain.py  get_domain.py  list_domains.py  update_domain.py
src/mailhookoss/application/emails/: delete_email.py  get_email.py  list_emails.py  search_emails.py  update_email.py
src/mailhookoss/application/mailboxes/: create_mailbox.py  delete_mailbox.py  get_mailbox.py  list_mailboxes.py  update_mailbox.py
src/mailhookoss/application/tenants/: create_tenant.py  get_tenant.py  list_tenants.py  update_tenant.py
src/mailhookoss/application/threads/: get_thread.py  list_threads.py  update_thread.py
src/mailhookoss/application/webhooks/: create_webhook.py  delete_webhook.py  get_webhook.py  list_webhooks.py  update_webhook.py
src/mailhookoss/domain/api_keys/: entities.py  exceptions.py  repository.py  service.py  value_objects.py
src/mailhookoss/domain/common/: entity.py  exceptions.py  repository.py  value_object.py
src/mailhookoss/domain/domains/: entities.py  exceptions.py  repository.py  value_objects.py
src/mailhookoss/domain/emails/: entities.py  exceptions.py  parser.py  repository.py  search.py  service.py  value_objects.py
src/mailhookoss/domain/mailboxes/: entities.py  exceptions.py  repository.py  value_objects.py
src/mailhookoss/domain/tenants/: entities.py  exceptions.py  repository.py
src/mailhookoss/domain/threads/: __init__.py  entities.py  repository.py  service.py  threading_algorithm.py
src/mailhookoss/domain/webhooks/: __init__.py  entities.py  exceptions.py  repository.py  service.py  value_objects.py
src/mailhookoss/infrastructure/cache/: __init__.py  redis.py
src/mailhookoss/infrastructure/database/: base.py  session.py
src/mailhookoss/infrastructure/database/models/: __init__.py  api_key.py  domain.py  email.py  mailbox.py  tenant.py
src/mailhookoss/infrastructure/database/repositories/: api_key.py  domain.py  email.py  mailbox.py  tenant.py  thread.py
src/mailhookoss/infrastructure/email_provider/: __init__.py  ses.py
src/mailhookoss/infrastructure/storage/: __init__.py  s3.py
src/mailhookoss/utils/: id_generator.py
