[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailhookoss"
version = "1.0.0"
description = "Open-source multi-tenant email management API service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "MailhookOSS Contributors" }
]
keywords = ["email", "api", "mailhook", "webhooks", "ses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Communications :: Email",
]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.9",  # For file uploads
    "orjson>=3.9.0",  # Fast JSON serialization

    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache & Queue
    "redis[hiredis]>=5.0.0",
    "arq>=0.26.0",

    # Storage
    "aioboto3>=12.3.0",
    "boto3>=1.34.0",  # For type stubs

    # AWS Services
    "aiobotocore[boto3]>=2.11.0",

    # Email Processing
    "python-magic>=0.4.27",  # MIME type detection
    "markdown>=3.5.0",  # Markdown to HTML
    "premailer>=3.10.0",  # CSS inlining
    "bleach>=6.1.0",  # HTML sanitization

    # Webhooks
    "svix>=1.21.0",  # Standard Webhooks

    # HTTP Client
    "httpx>=0.26.0",

    # Utilities
    "python-ulid>=2.2.0",  # ID generation
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",

    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",

    # Security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.1.0",
    "httpx>=0.26.0",  # For TestClient
    "faker>=22.0.0",  # Test data generation
    "factory-boy>=3.3.0",  # Test fixtures

    # Code Quality
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Type Stubs
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.8.19",
    "types-bleach>=6.1.0",
    "types-markdown>=3.5.0",
    "boto3-stubs[s3,ses]>=1.34.0",

    # Development Tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/mailhookoss"
Documentation = "https://github.com/yourusername/mailhookoss/blob/main/README.md"
Repository = "https://github.com/yourusername/mailhookoss"
Issues = "https://github.com/yourusername/mailhookoss/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mailhookoss"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=mailhookoss",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
env = [
    "TESTING=1",
    "DATABASE_URL=postgresql+asyncpg://mailhook:mailhook@localhost:5432/mailhook_test",
    "REDIS_URL=redis://localhost:6379/1",
]

[tool.coverage.run]
source = ["src/mailhookoss"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
namespace_packages = true
show_error_codes = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "arq.*",
    "premailer.*",
    "magic.*",
    "svix.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    "S101",    # Use of assert detected (needed for pytest)
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Assert allowed in tests
    "ARG",     # Unused function args in fixtures
    "PLR2004", # Magic value used in comparison
]
"alembic/**/*.py" = [
    "ANN",     # Type annotations not required in migrations
]

[tool.ruff.lint.isort]
known-first-party = ["mailhookoss"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
